finished CSS styling for landscape aspect

--- a/lesson02/assignment/css/_components.content.scss
+++ b/lesson02/assignment/css/_components.content.scss
@@ -16,6 +16,8 @@ html {
     grid-template-columns: 35% 65%;
 }
 
-h1 {
-    color: #white;
+a {
+  text-decoration: none;
+  color: inherit;
+  padding: 0.5rem;
 }
