--- a/lesson02/assignment/css/style.scss
+++ b/lesson02/assignment/css/style.scss
@@ -4,33 +4,52 @@
 @import 'settings.responsive';
 @import 'components.content';
 
+
+h1, h3, p, a {
+  color: $charcoal;
+}
+
 .identity {
   grid-column: 1 / span 1;
+  & img {
+    border-radius: 50%;
+    width: 100%;
+  }
+  & div.name-position {
+    width: 80%;
+    margin: 1rem auto;
+    text-align: center;
+  }
+  & h1 {
+    margin: 1rem 0 0.25rem 0;
+  }
+  & h3 {
+    margin: 0;
+    font-size: 140%;
+    font-weight: lighter;
+    font-style: italic;
+  }
 }
 
 .info {
   grid-column: 2 / span 1;
   background-color: $gray;
-  margin-left: 1rem;
-  padding: 1rem;
+  margin-left: 1.5rem;
+  padding: 2rem;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
-}
-
-.name-position {
-  width: 80%;
-  margin: auto;
-  text-align: center;
-}
-
-h1, h3, p {
-  color: $charcoal;
-}
-
-img {
-  &.headshot {
-    border-radius: 50%;
-    width: 100%;
+  justify-content: space-between;
+  & p {
+    font-weight: lighter;
+    margin: 0;
+  }
+  & span.spanstyle {
+    font-weight: bold;
+    font-size: 115%;
+  }
+  & div.social-link {
+    display: flex;
+    flex-direction: row;
+    align-content: center;
   }
 }
