--- a/lesson02/assignment/css/_components.content.scss
+++ b/lesson02/assignment/css/_components.content.scss
@@ -20,4 +20,8 @@ a {
   text-decoration: none;
   color: inherit;
   padding: 0.5rem;
+  &:hover {
+    background-color: complement($dark-gray);
+    //border-radius: 35%;
+  }
 }
