--- a/lesson02/assignment/css/_components.content.scss
+++ b/lesson02/assignment/css/_components.content.scss
@@ -9,11 +9,14 @@ html {
 }
 
 .main {
-    padding: 2rem;
     margin: 1rem;
+    padding: 2rem;
     border: 2rem solid $dark-gray;
-    display: grid;
-    grid-template-columns: 35% 65%;
+
+    @include media-query(tab) {
+      display: grid;
+      grid-template-columns: 35% 65%;
+    }
 }
 
 a {
@@ -22,6 +25,6 @@ a {
   padding: 0.5rem;
   &:hover {
     background-color: complement($dark-gray);
-    //border-radius: 35%;
+    border-radius: 35%;
   }
 }
