--- a/lesson03/assignment/css/_components.content.scss
+++ b/lesson03/assignment/css/_components.content.scss
@@ -9,9 +9,22 @@ html {
 }
 
 .main {
+    margin: 1rem;
     padding: 2rem;
+    border: 2rem solid $dark-gray;
+
+    @include media-query(tab) {
+      display: grid;
+      grid-template-columns: 35% 65%;
+    }
 }
 
-h1 {
-    color: $red;  
+a {
+  text-decoration: none;
+  color: inherit;
+  padding: 0.5rem;
+  &:hover {
+    background-color: complement($dark-gray);
+    border-radius: 35%;
+  }
 }
