--- a/lesson03/assignment/css/_settings.responsive.scss
+++ b/lesson03/assignment/css/_settings.responsive.scss
@@ -44,7 +44,7 @@ $breakpoints: (
     "infograph"     "screen and (min-width: 540px)",
     "med"           "screen and (min-width: 40em)",
     "sm"            "screen and (min-width: 30em)",
-    "small"         "screen and (min-width: 20em)",
+    "small"         "screen and (max-width: 400px)",
     "tiny"          "screen and (max-width: 320px)",
     "retina"        "(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx)",
     "ie"            "all and(-ms-high-contrast: none), (-ms-high-contrast: active)",
