added main components and basic hover effects

--- a/lesson04/assignment/css/_components.content.scss
+++ b/lesson04/assignment/css/_components.content.scss
@@ -1,5 +1,6 @@
 html {
     box-sizing: border-box;
+    font-family: $text-font;
 }
 
 *,
@@ -8,6 +9,29 @@ html {
     box-sizing: inherit;
 }
 
+body {
+  display: grid;
+  grid-template-columns: 15% 70% 15%;
+  background-color: $near-black;
+  color: $cream;
+}
+
 .main {
-    padding: 2rem;
+  grid-row: 2 / span 1;
+  grid-column: 2 / span 1;
+  margin: 3rem auto;
+  justify-content: center;
+}
+
+h1, h2, h3 {
+  font-family: $header-font;
+  font-weight: lighter;
+  word-spacing: 3px;
+  letter-spacing: 1.5px;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+  padding: 0.5rem;
 }
