--- a/lesson04/assignment/css/_settings.variables.scss
+++ b/lesson04/assignment/css/_settings.variables.scss
@@ -1,9 +1,7 @@
 // Colors
-// $gray: #f6f5f6;
-// $dark-gray: #d3d3d3;
-// $white: #ffffff;
-// $black: #000000;
-// $charcoal: #676767;
+$cream: #fffbe9;
+$near-black: #101010;
+$wine-red: #b21e3b;
 
-$font-heading: 'Georgia', 'Times', serif;
-$font-text: 'Monserrat', 'Arial', sans-serif;
+$header-font: 'Georgia', 'Times', serif;
+$text-font: 'Raleway', 'Helvetica', sans-serif;
