--- a/lesson04/assignment/css/style.scss
+++ b/lesson04/assignment/css/style.scss
@@ -1,15 +1,318 @@
-// Import partials
+// Import partials here
 @import 'settings.variables';
 @import 'base.normalize';
 @import 'settings.responsive';
 @import 'components.content';
 
-// header {
-//   //background-image: url("../images/header-background.jpeg"), linear-gradient(to top, #093c60, black);
-//   background-color: green;
-// }
-
-p {
-  color: orange;
-  font-weight: bold;
+header {
+  grid-row: 1 / span 1;
+  grid-column: 1 / span 3;
+  background-image: url("../img/header-image.jpg"), linear-gradient(to bottom, $wine-red, $near-black);
+  background-color: $near-black;
+  background-size: cover;
+  background-position: 50% 80%;
+  color: $cream;
+  height: 18rem;
+  border-bottom: 2px $cream solid;
+  & .logo-container {
+    position: relative;
+    top: 7rem;
+    left: 1rem;
+    width: 45%;
+    padding: 0.6rem;
+  & h3 {
+      margin: -1rem 0 2rem 1.75rem;
+    }
+  }
+  // & nav {
+  //   position: absolute;
+  //   top: 17rem;
+  //   background-color: $near-black;
+  //   padding: 0.75rem;
+  //   width: 100%;
+  //   color: $cream;
+  // }
 }
+
+.box-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.nav-option {
+  //common styles
+  width: 40%;
+  margin: 2% 0;
+  display: inline-block;
+  border: 4px solid $cream;
+  overflow: hidden;
+  position: relative;
+  text-align: center;
+  -webkit-box-shadow: 1px 1px 2px #e6e6e6;
+  -moz-box-shadow: 1px 1px 2px #e6e6e6;
+  box-shadow: 1px 1px 2px #e6e6e6;
+  cursor: default;
+  background: #fff url(./img/bgimg.jpg) no-repeat center center;
+  &:hover {
+    & .pic-layer {
+      opacity: 0;
+    }
+  }
+  & img {
+    //common styles
+    display: block;
+    position: relative;
+    max-width: 100%;
+    //transition styles
+    -webkit-transform: scaleY(1);
+    -moz-transform: scaleY(1);
+    -o-transform: scaleY(1);
+    -ms-transform: scaleY(1);
+    transform: scaleY(1);
+    -webkit-transition: all 0.7s ease-in-out;
+    -moz-transition: all 0.7s ease-in-out;
+    -o-transition: all 0.7s ease-in-out;
+    -ms-transition: all 0.7s ease-in-out;
+    transition: all 0.7s ease-in-out;
+  }
+  & h2 {
+    //common styles
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    background-color: rgba(1, 1, 1, 0.6);
+    padding: 2rem;
+  }
+  & .mask {
+    //common styles
+    width: 100%;
+    background-size: cover;
+    position: absolute;
+    overflow: hidden;
+    top: 0;
+    left: 0;
+    background-color: rgba(255, 231, 179, 0.3);
+    //transition styles
+    -webkit-transition: all 0.5s linear;
+    -moz-transition: all 0.5s linear;
+    -o-transition: all 0.5s linear;
+    -ms-transition: all 0.5s linear;
+    transition: all 0.5s linear;
+    -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    filter: alpha(opacity=0);
+    opacity: 0;
+  }
+  & h3 {
+    //common styles
+    text-transform: uppercase;
+    color: #fff;
+    text-align: center;
+    position: relative;
+    font-size: 17px;
+    padding: 10px;
+    background: rgba(0, 0, 0, 0.8);
+    margin: 20px 0 0 0;
+    //transition styles
+    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+    background: transparent;
+    margin: 20px 40px 0px 40px;
+    -webkit-transform: scale(0);
+    -moz-transform: scale(0);
+    -o-transform: scale(0);
+    -ms-transform: scale(0);
+    transform: scale(0);
+    color: #333;
+    -webkit-transition: all 0.5s linear;
+    -moz-transition: all 0.5s linear;
+    -o-transition: all 0.5s linear;
+    -ms-transition: all 0.5s linear;
+    transition: all 0.5s linear;
+    -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    filter: alpha(opacity=0);
+    opacity: 0;
+  }
+  & p {
+    //common styles
+    font-family: Georgia, serif;
+    font-style: italic;
+    font-size: 12px;
+    position: relative;
+    color: #fff;
+    padding: 10px 20px 20px;
+    text-align: center;
+    //transition styles
+    color: #333;
+    -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    filter: alpha(opacity=0);
+    opacity: 0;
+    -webkit-transform: scale(0);
+    -moz-transform: scale(0);
+    -o-transform: scale(0);
+    -ms-transform: scale(0);
+    transform: scale(0);
+    -webkit-transition: all 0.5s linear;
+    -moz-transition: all 0.5s linear;
+    -o-transition: all 0.5s linear;
+    -ms-transition: all 0.5s linear;
+    transition: all 0.5s linear;
+  }
+  & a.info {
+    //common styles
+    display: inline-block;
+    text-decoration: none;
+    padding: 7px 14px;
+    background: #000;
+    color: #fff;
+    text-transform: uppercase;
+    -webkit-box-shadow: 0 0 1px #000;
+    -moz-box-shadow: 0 0 1px #000;
+    box-shadow: 0 0 1px #000;
+    //transition styles
+    -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    filter: alpha(opacity=0);
+    opacity: 0;
+    -webkit-transform: scale(0);
+    -moz-transform: scale(0);
+    -o-transform: scale(0);
+    -ms-transform: scale(0);
+    transform: scale(0);
+    -webkit-transition: all 0.5s linear;
+    -moz-transition: all 0.5s linear;
+    -o-transition: all 0.5s linear;
+    -ms-transition: all 0.5s linear;
+    transition: all 0.5s linear;
+    & :hover {
+      -webkit-box-shadow: 0 0 5px #000;
+      -moz-box-shadow: 0 0 5px #000;
+      box-shadow: 0 0 5px #000;
+    }
+  }
+  & :hover img {
+     -webkit-transform: scale(10);
+     -moz-transform: scale(10);
+     -o-transform: scale(10);
+     -ms-transform: scale(10);
+     transform: scale(10);
+     -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=0)";
+     filter: alpha(opacity=0);
+     opacity: 0;
+  }
+  & :hover .mask {
+     -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=100)";
+     filter: alpha(opacity=100);
+     opacity: 1;
+  }
+  & :hover h2, p, a.info {
+     -webkit-transform: scale(1);
+     -moz-transform: scale(1);
+     -o-transform: scale(1);
+     -ms-transform: scale(1);
+     transform: scale(1);
+     -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=100)";
+     filter: alpha(opacity=100);
+     opacity: 1;
+  }
+}
+
+// .view-tenth img {
+//    -webkit-transform: scaleY(1);
+//    -moz-transform: scaleY(1);
+//    -o-transform: scaleY(1);
+//    -ms-transform: scaleY(1);
+//    transform: scaleY(1);
+//    -webkit-transition: all 0.7s ease-in-out;
+//    -moz-transition: all 0.7s ease-in-out;
+//    -o-transition: all 0.7s ease-in-out;
+//    -ms-transition: all 0.7s ease-in-out;
+//    transition: all 0.7s ease-in-out;
+// }
+// .view-tenth .mask {
+//    background-color: rgba(255, 231, 179, 0.3);
+//    -webkit-transition: all 0.5s linear;
+//    -moz-transition: all 0.5s linear;
+//    -o-transition: all 0.5s linear;
+//    -ms-transition: all 0.5s linear;
+//    transition: all 0.5s linear;
+//    -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=0)";
+//    filter: alpha(opacity=0);
+//    opacity: 0;
+// }
+// .view-tenth h2 {
+//    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+//    background: transparent;
+//    margin: 20px 40px 0px 40px;
+//    -webkit-transform: scale(0);
+//    -moz-transform: scale(0);
+//    -o-transform: scale(0);
+//    -ms-transform: scale(0);
+//    transform: scale(0);
+//    color: #333;
+//    -webkit-transition: all 0.5s linear;
+//    -moz-transition: all 0.5s linear;
+//    -o-transition: all 0.5s linear;
+//    -ms-transition: all 0.5s linear;
+//    transition: all 0.5s linear;
+//    -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=0)";
+//    filter: alpha(opacity=0);
+//    opacity: 0;
+// }
+// .view-tenth p {
+//    color: #333;
+//    -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=0)";
+//    filter: alpha(opacity=0);
+//    opacity: 0;
+//    -webkit-transform: scale(0);
+//    -moz-transform: scale(0);
+//    -o-transform: scale(0);
+//    -ms-transform: scale(0);
+//    transform: scale(0);
+//    -webkit-transition: all 0.5s linear;
+//    -moz-transition: all 0.5s linear;
+//    -o-transition: all 0.5s linear;
+//    -ms-transition: all 0.5s linear;
+//    transition: all 0.5s linear;
+// }
+// .view-tenth a.info {
+//    -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=0)";
+//    filter: alpha(opacity=0);
+//    opacity: 0;
+//    -webkit-transform: scale(0);
+//    -moz-transform: scale(0);
+//    -o-transform: scale(0);
+//    -ms-transform: scale(0);
+//    transform: scale(0);
+//    -webkit-transition: all 0.5s linear;
+//    -moz-transition: all 0.5s linear;
+//    -o-transition: all 0.5s linear;
+//    -ms-transition: all 0.5s linear;
+//    transition: all 0.5s linear;
+// }
+// .view-tenth:hover img {
+//    -webkit-transform: scale(10);
+//    -moz-transform: scale(10);
+//    -o-transform: scale(10);
+//    -ms-transform: scale(10);
+//    transform: scale(10);
+//    -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=0)";
+//    filter: alpha(opacity=0);
+//    opacity: 0;
+// }
+// .view-tenth:hover .mask {
+//    -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=100)";
+//    filter: alpha(opacity=100);
+//    opacity: 1;
+// }
+// .view-tenth:hover h2,.view-tenth:hover p,.view-tenth:hover a.info {
+//    -webkit-transform: scale(1);
+//    -moz-transform: scale(1);
+//    -o-transform: scale(1);
+//    -ms-transform: scale(1);
+//    transform: scale(1);
+//    -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=100)";
+//    filter: alpha(opacity=100);
+//    opacity: 1;
+// }
