--- a/lesson04/assignment/css/_components.content.scss
+++ b/lesson04/assignment/css/_components.content.scss
@@ -19,7 +19,7 @@ body {
 .main {
   grid-row: 2 / span 1;
   grid-column: 2 / span 1;
-  margin: 3rem auto;
+  margin: 3rem 0;
   justify-content: center;
 }
 
