--- a/lesson04/assignment/css/_settings.variables.scss
+++ b/lesson04/assignment/css/_settings.variables.scss
@@ -3,5 +3,5 @@ $cream: #fffbe9;
 $near-black: #101010;
 $wine-red: #b21e3b;
 
-$header-font: 'Georgia', 'Times', serif;
-$text-font: 'Raleway', 'Helvetica', sans-serif;
+$main-font: 'Georgia', 'Times', serif;
+$link-font: 'Raleway', 'Helvetica', sans-serif;
