--- a/lesson04/assignment/css/_settings.variables.scss
+++ b/lesson04/assignment/css/_settings.variables.scss
@@ -1,6 +1,7 @@
 // Colors
 $cream: #fffbe9;
 $near-black: #101010;
+$near-black-fade: #101010CC;
 $wine-red: #b21e3b;
 
 $main-font: 'Georgia', 'Times', serif;
