implemented basic color arrangement

--- a/lesson05/assignment/css/_components.content.scss
+++ b/lesson05/assignment/css/_components.content.scss
@@ -1,5 +1,6 @@
 html {
     box-sizing: border-box;
+    margin: 0;
 }
 
 *,
@@ -9,5 +10,6 @@ html {
 }
 
 .main {
-    padding: 2rem;
+    //padding: 2rem;
+
 }
