--- a/lesson05/assignment/css/_settings.variables.scss
+++ b/lesson05/assignment/css/_settings.variables.scss
@@ -1,1 +1,9 @@
 // Colors
+$white: #FFFFFF;
+$scarlet: #F1232B;
+$lime: #7ACB00;
+$purple: #6E27C5;
+$orange: #FF6600;
+$blue: #150F96;
+
+$font-fam: 'Helvetica Neue', helvetica, arial, sans-serif;
