--- a/lesson05/activity/css/style.scss
+++ b/lesson05/activity/css/style.scss
@@ -9,7 +9,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 2rem 1rem;
+  // padding: 2rem 1rem;
   flex-wrap: wrap;
   flex: 1 1 auto;
   &-wrap {
