--- a/lesson05/assignment/css/_settings.variables.scss
+++ b/lesson05/assignment/css/_settings.variables.scss
@@ -1,9 +1,14 @@
 // Colors
+$cream: #fffbe9;
+$near-black: #101010;
+$near-black-fade: #101010CC;
+$wine-red: #b21e3b;
+
 $white: #FFFFFF;
 $scarlet: #F1232B;
-$lime: #7ACB00;
 $purple: #6E27C5;
 $orange: #FF6600;
 $blue: #150F96;
 
-$font-fam: 'Helvetica Neue', helvetica, arial, sans-serif;
+$head-font: 'Georgia', 'Times', serif;
+$main-font: 'Raleway', 'Helvetica', sans-serif;
