--- a/lesson02/assignment/css/_components.content.scss
+++ b/lesson02/assignment/css/_components.content.scss
@@ -19,6 +19,12 @@ html {
     }
 }
 
+h1, h2, h3 {
+  font-weight: lighter;
+  word-spacing: 3px;
+  letter-spacing: 1.5px;
+}
+
 a {
   text-decoration: none;
   color: inherit;
