updated styling to accomodate index.html homepage

--- a/lesson05/assignment/css/_components.content.scss
+++ b/lesson05/assignment/css/_components.content.scss
@@ -9,6 +9,10 @@ html {
     box-sizing: inherit;
 }
 
+.main-home {
+  display: grid;
+  grid-template-columns: 15% 70% 15%;
+}
 
 .main {
   display: grid;
