--- a/lesson05/assignment/css/style.scss
+++ b/lesson05/assignment/css/style.scss
@@ -7,7 +7,7 @@
 //styling for header block
 .header {
   grid-row: 1 / span 1;
-  grid-column: 1 / span 3;
+  grid-column: 1 / span 3; //set to span 3 to accomodate grid for index.html
   background-image: url("../img/header-image.jpg"), linear-gradient(to bottom, $wine-red, $near-black);
   background-color: $near-black;
   background-size: cover;
@@ -164,7 +164,7 @@
 
 //footer block styling
 .footer {
-  grid-column: 1 / span 2;
+  grid-column: 1 / span 3; //set to span 3 to accomodate grid for index.html
   background-color: $near-black;
   border-top: 6px double $cream;
   min-height: 8rem;
@@ -178,5 +178,49 @@
   }
   &__link {
     margin: 0 1rem;
+    color: $cream;
+  }
+}
+
+//styling needed for index.html homepage
+body.home {
+  background-color: $near-black;
+}
+
+.main-content-home {
+  grid-row: 2 / span 1;
+  grid-column: 2 / span 1;
+  margin: 3rem 0;
+  justify-content: center;
+  background-color: $near-black;
+  color: $cream;
+}
+
+.alert {
+  background-color: yellow;
+  color: $near-black;
+  width: 80%;
+  margin: auto;
+}
+
+.container {
+  //display: block;
+  @include media-query(tab) {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+  }
+  &__nav-option {
+    width: 100%;
+    margin: 2% 0;
+    display: inline-block;
+    border: 4px solid $cream;
+    overflow: hidden;
+    position: relative;
+    text-align: center;
+    @include media-query(tab) {
+      width: 40%;
+    }
   }
 }
